--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
                             <!-- ToDo:プロフィール画像を受け取ったら更新する -->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>岩崎さん</h4>
+                                <h4>岩崎先生</h4>
                                 <p>三重県を中心に仕事している、情報処理科の先生です。</p>
-                                <p>木曜日と日曜日は太鼓をしています。</p>
+                                <p>木曜日と日曜日は太鼓をしています。カフェ巡りが趣味。</p>
                                 <p>得意料理はハンバーグです。</p>
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>三谷さん</h4>
+                                <h4>三谷先生</h4>
                                 <p>明和町に住んでいる若手プログラマー。</p>
                                 <p>休日は猫と戯れることが多い。</p>
                                 <p>得意料理はたこ焼き。</p>
